Issue #2030087 by Zarabadoo: Make the WYSISYG work more reliaby on Safari for iPad.

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -41,6 +41,14 @@
 html {
   background: $page;
   font-size: 87.5%;
+  min-height: 100%;
+
+  .cke_editable {
+    @include box-sizing(border-box);
+    padding: 1em;
+    background: $white;
+    min-height: 200px;
+  }
 }
 
 body {
